# flatlana

./: .gitignore  Cargo.toml  README.md  gen.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  validator.sh
program/: Cargo.toml
program/src/: lib.rs
program/ts-client/: package.json
program/ts-client/src/: index.ts
program/ts-client/tests/: main.test.ts
schemas/: flatlana_instruction.fbs  tweedle_dee.fbs  tweedle_dum.fbs
schemas-rust/: Cargo.toml
schemas-rust/src/: error.rs  flatlana_instruction_generated.rs  lib.rs  tweedle_dee_generated.rs  tweedle_dum_generated.rs
schemas-ts/: flatlana-instruction-data.ts  flatlana-instruction.ts  flatlana_instruction.ts  instruction-type.ts  package.json  tweedle-dee-v1.ts  tweedle-dum-v1.ts  tweedle_dee.ts  tweedle_dum.ts
