[package]
name = "flatlana-program"
version = "0.0.1"
description = "Flatalana program"
authors = ["anagram build team"]
repository = "https://github.com/anagrambuild/flatlana"
license = "MIT"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = {workspace = true}
flatlana-types = {path = "../schemas-rust"}
thiserror = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]